# fluidsGL

./: CMakeLists.txt  README.md
include/: fluidsGL_kernels.cuh  fluidsGL_kernels.h  helper_cuda.h  helper_gl.h  helper_hip.h
src/: fluidsGL.cpp  fluidsGL.cu  fluidsGL_kernels.cu
